product section done

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
       </script>
 </head>
-<body>
+<body class="manrope">
 
     <header class="bg-gray-100 py-5 px-7 md:px-20 lg:px-32">
         <!-- ---nav section--- -->
@@ -54,10 +54,10 @@
         <!-- --header container-- -->
         <div class="grid grid-cols-1 my-12 lg:grid-cols-2 md:grid-cols-2 lg:my-10 md:my-10">
         <!-- --header text section-- -->
-            <div class="space-y-5 mt-12">
+            <div class="space-y-5 mt-12 nunito">
                 <h1 class="text-4xl font-medium md:text-5xl md:font-semibold lg:text-6xl lg:font-bold">It's good <br> tea time at The <br> Tea House</h1>
                 <p class="max-w-96 font-medium text-gray-700">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
-                <button class="bg-gradient-to-r from-yellow-500 to-red-600 px-4 py-3 rounded-lg text-white">Explore now <i class="fa-solid fa-arrow-right -rotate-45 ml-2 text-xl"></i></button>
+                <button class="bg-gradient-to-r from-yellow-500 to-red-600 px-4 py-3 rounded-lg text-white text-lg font-medium">Explore now <i class="fa-solid fa-arrow-right -rotate-45 ml-2 text-xl"></i></button>
             </div>
         <!-- ---header images section--- -->
             <div class="relative">
@@ -79,7 +79,41 @@
     </header>
 
     <main>
+        <!-- ----Product content text---- -->
+         <div class="text-center px-12 max-w-4xl mx-auto py-14 space-y-3 ">
+            <h1 class="lg:text-5xl text-3xl md:text-4xl font-bold ">Our Featured Produts</h1>
+            <p class="text-lg text-slate-700">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+         </div>
 
+         <!-- --product cart layout container-- -->
+         <div class="max-w-screen-xl lg:px-32 md:px-28 mx-auto grid grid-cols-1 gap-8 lg:grid-cols-4 md:grid-cols-2 px-10">
+        <!-- -- Product cart--- -->
+         
+        <div class="bg-gradient-to-b from-gray-300 to-gray-50 p-5 text-center rounded-lg space-y-2 shadow-lg">
+           <img class="mx-auto" src="./images/tea-1.png" alt="">
+           <h2 class="font-bold text-xl pt-4">Milk tea</h2>
+           <p class="text-slate-700 font-medium">Creamer could be <br> replaced by fresh milk</p>
+        </div>
+
+        <div class="bg-gradient-to-b from-gray-300 to-gray-50 p-5 text-center rounded-lg space-y-2 shadow-lg">
+            <img class="mx-auto" src="./images/tea-2.png" alt="">
+            <h2 class="font-bold text-xl pt-4">Milk tea</h2>
+            <p class="text-slate-700 font-medium">Creamer could be <br> replaced by fresh milk</p>
+         </div>
+
+         <div class="bg-gradient-to-b from-gray-300 to-gray-50 p-5 text-center rounded-lg space-y-2 shadow-lg">
+            <img class="mx-auto" src="./images/tea-3.png" alt="">
+            <h2 class="font-bold text-xl pt-4">Milk tea</h2>
+            <p class="text-slate-700 font-medium">Creamer could be <br> replaced by fresh milk</p>
+         </div>
+
+         <div class="bg-gradient-to-b from-gray-300 to-gray-50 p-5 text-center rounded-lg space-y-2 shadow-lg">
+            <img class="mx-auto" src="./images/tea-4.png" alt="">
+            <h2 class="font-bold text-xl pt-4">Milk tea</h2>
+            <p class="text-slate-700 font-medium">Creamer could be <br> replaced by fresh milk</p>
+         </div>
+
+        </div>
     </main>
 
     <footer>
