hover effect add

--- a/index.html
+++ b/index.html
@@ -89,25 +89,25 @@
          <div class="max-w-screen-xl lg:px-32 md:px-28 mx-auto grid grid-cols-1 gap-8 lg:grid-cols-4 md:grid-cols-2 px-10">
         <!-- -- Product cart--- -->
          
-        <div class="bg-gradient-to-b from-gray-300 to-gray-50 p-5 text-center rounded-lg space-y-2 shadow-lg">
+        <div class="bg-gradient-to-b from-gray-300 to-gray-50 p-5 text-center rounded-lg space-y-2 shadow-lg cursor-pointer hover:-translate-y-3 duration-200 hover:shadow-xl">
            <img class="mx-auto" src="./images/tea-1.png" alt="">
            <h2 class="font-bold text-xl pt-4">Milk tea</h2>
            <p class="text-slate-700 font-medium">Creamer could be <br> replaced by fresh milk</p>
         </div>
 
-        <div class="bg-gradient-to-b from-gray-300 to-gray-50 p-5 text-center rounded-lg space-y-2 shadow-lg">
+        <div class="bg-gradient-to-b from-gray-300 to-gray-50 p-5 text-center rounded-lg space-y-2 shadow-lg cursor-pointer hover:-translate-y-3 duration-200 hover:shadow-xl">
             <img class="mx-auto" src="./images/tea-2.png" alt="">
             <h2 class="font-bold text-xl pt-4">Milk tea</h2>
             <p class="text-slate-700 font-medium">Creamer could be <br> replaced by fresh milk</p>
          </div>
 
-         <div class="bg-gradient-to-b from-gray-300 to-gray-50 p-5 text-center rounded-lg space-y-2 shadow-lg">
+         <div class="bg-gradient-to-b from-gray-300 to-gray-50 p-5 text-center rounded-lg space-y-2 shadow-lg cursor-pointer hover:-translate-y-3 duration-200 hover:shadow-xl">
             <img class="mx-auto" src="./images/tea-3.png" alt="">
             <h2 class="font-bold text-xl pt-4">Milk tea</h2>
             <p class="text-slate-700 font-medium">Creamer could be <br> replaced by fresh milk</p>
          </div>
 
-         <div class="bg-gradient-to-b from-gray-300 to-gray-50 p-5 text-center rounded-lg space-y-2 shadow-lg">
+         <div class="bg-gradient-to-b from-gray-300 to-gray-50 p-5 text-center rounded-lg space-y-2 shadow-lg cursor-pointer hover:-translate-y-3 duration-200 hover:shadow-xl">
             <img class="mx-auto" src="./images/tea-4.png" alt="">
             <h2 class="font-bold text-xl pt-4">Milk tea</h2>
             <p class="text-slate-700 font-medium">Creamer could be <br> replaced by fresh milk</p>
