great tea section

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
          </div>
 
          <!-- --product cart layout container-- -->
-         <div class="max-w-screen-xl lg:px-32 md:px-28 mx-auto grid grid-cols-1 gap-8 lg:grid-cols-4 md:grid-cols-2 px-10">
+         <div class="max-w-screen-xl lg:px-32 md:px-28 mx-auto px-10 py-10 grid grid-cols-1 gap-8 lg:grid-cols-4 md:grid-cols-2 ">
         <!-- -- Product cart--- -->
          
         <div class="bg-gradient-to-b from-gray-300 to-gray-50 p-5 text-center rounded-lg space-y-2 shadow-lg cursor-pointer hover:-translate-y-3 duration-200 hover:shadow-xl">
@@ -111,6 +111,41 @@
             <img class="mx-auto" src="./images/tea-4.png" alt="">
             <h2 class="font-bold text-xl pt-4">Milk tea</h2>
             <p class="text-slate-700 font-medium">Creamer could be <br> replaced by fresh milk</p>
+         </div>
+
+        </div>
+
+        <!-- ---Great tea container--- -->
+
+        <div class="max-w-screen-xl lg:px-32 md:px-28 mx-auto px-10  grid grid-cols-1 gap-10 lg:grid-cols-2 ">
+        
+        <!-- ---great tea img-- -->
+        <div class="grid grid-cols-2 grid-rows-3 gap-6">
+
+            <div class="bg-red-200 rounded-lg">
+                <img class="h-36 w-full rounded-lg" src="./images/fresh-3-removebg-preview.png" alt="">
+            </div>
+
+            <div class="bg-red-100 row-span-2 pt-5 rounded-lg">
+                <img class="mx-auto" src="./images/fresh-1.png" alt="">
+            </div>
+            <div class="bg-red-100 row-span-2 py-5 rounded-lg">
+                <img class="mx-auto" src="./images/fresh-2.png" alt="">
+            </div>
+            <div class="bg-gray-400 rounded-lg overflow-hidden">
+                <img class="h-36 mx-auto py-2" src="./images/fresh-4-removebg-preview.png" alt="">
+            </div>
+        </div>
+        <!-- ---great contetn-- -->
+         <div class="">
+            <h1 class="text-3xl font-extrabold md:text-4xl md:font-bold lg:text-5xl lg:font-extrabold mb-3">Great Tea, Freshly <br> Presented</h1>
+            <p class="text-slate-600 font-medium">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+            <br>
+            <h2 class="mb-2 font-semibold text-2xl">Unique Taste</h2>
+            <p class="text-slate-600 font-medium">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+            <br>
+            <h2 class="mb-2 font-semibold text-2xl" >Premium Quality</h2>
+            <p class="text-slate-600 font-medium">Premium Quality that makes tea more elegant and more durable when you use it.</p>
          </div>
 
         </div>
