three cart section

--- a/index.html
+++ b/index.html
@@ -116,7 +116,6 @@
         </div>
 
         <!-- ---Great tea container--- -->
-
         <div class="max-w-screen-xl lg:px-32 md:px-28 mx-auto px-10  grid grid-cols-1 gap-10 lg:grid-cols-2 ">
         
         <!-- ---great tea img-- -->
@@ -148,6 +147,60 @@
             <p class="text-slate-600 font-medium">Premium Quality that makes tea more elegant and more durable when you use it.</p>
          </div>
 
+        </div>
+
+        <!-- ----Meet client section---- -->
+         <div class="grid grid-cols-1 lg:gap-20 lg:grid-cols-2 bg-gradient-to-r from-yellow-500 to-red-500 my-14 lg:px-32 md:px-28 mx-auto px-10">
+        <!-- ----Meet Client content----- -->
+            <div class="py-12 my-auto space-y-8">
+               <h1 class="font-bold text-3xl md:text-4xl lg:text-6xl mb-3 text-white">
+                Meet Our Super <br> Clients
+               </h1>
+               <p class="text-gray-200 font-medium leading-7">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+               <button class="bg-white font-semibold text-lg text-yellow-500 px-5 py-3 rounded-lg mt-5">Show All</button>
+            </div>
+
+         <div class="md:pl-24 relative pr-0">
+
+        <!-- ---middel clinet img cart--- -->
+        <div class="my-16 absolute top-40 right-24 z-20 ">
+            <div class="bg-white relative rounded-lg">
+                <img class="absolute -top-5 -left-5 bg-white rounded-full p-1" src="./images/client.png" alt="">
+                <div class="p-12 space-y-2 relative">
+                    <p class="font-medium text-md text-slate-600">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h3 class="font-bold text-lg">Ilham Yuda</h3>
+                    <p class="font-medium text-md text-slate-600">Businessman</p>
+                    <img class="absolute right-6 md:right-5 md:top-40 lg:right-5 lg:top-40" src="./images/circles.png" alt="">
+                </div>
+            </div>
+         </div>
+
+         <!-- ----Meet Client first Img cart---- -->
+         <div class="my-16 relative opacity-50 sm:pl-16">
+            <div class="bg-white relative rounded-lg">
+                <img class="absolute -top-5 -left-5 bg-white rounded-full p-1" src="./images/client.png" alt="">
+                <div class="p-12 space-y-2 relative">
+                    <p class="font-medium text-md text-slate-600">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h3 class="font-bold text-lg">Ilham Yuda</h3>
+                    <p class="font-medium text-md text-slate-600">Businessman</p>
+                    <img class="absolute  right-6 md:right-5 md:top-40 lg:right-5 lg:top-40" src="./images/circles.png" alt="">
+                </div>
+            </div>
+         </div>
+        
+        <!-- ----Meet Client second Img cart---- -->
+        <div class="my-16 relative opacity-50 sm:pl-16">
+            <div class="bg-white relative rounded-lg">
+                <img class="absolute -top-5 -left-5 bg-white rounded-full p-1" src="./images/client.png" alt="">
+                <div class="p-8 space-y-2">
+                    <p class="font-medium text-md text-slate-600">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h3 class="font-bold text-lg">Ilham Yuda</h3>
+                    <p class="font-medium text-md text-slate-600">Businessman</p>
+                    <img class=" absolute  right-6 md:right-5 md:top-40 lg:right-5 lg:top-40" src="./images/circles.png" alt="">
+                </div>
+              </div>
+        </div>
+          </div> 
         </div>
     </main>
 
