--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <div class="bg-red-100 row-span-2 pt-5 rounded-lg">
                 <img class="mx-auto" src="./images/fresh-1.png" alt="">
             </div>
-            <div class="bg-red-100 row-span-2 py-5 rounded-lg">
+            <div class="bg-cyan-100 row-span-2 py-5 rounded-lg">
                 <img class="mx-auto" src="./images/fresh-2.png" alt="">
             </div>
             <div class="bg-gray-400 rounded-lg overflow-hidden">
@@ -202,6 +202,45 @@
         </div>
           </div> 
         </div>
+
+        <!-- ----News event section----- -->
+         <div class="text-center px-12 max-w-4xl mx-auto py-14 space-y-3">
+            <h1 class="lg:text-5xl text-3xl md:text-4xl font-bold ">News & Events</h1>
+            <p class="text-lg text-slate-700">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+         </div>
+         <!-- ----News event procuts section----- -->
+          <div class="max-w-screen-xl lg:px-32 md:px-28 mx-auto px-10 grid grid-cols-1 gap-8 lg:grid-cols-3 md:grid-cols-2" >
+           <div class="bg-white shadow-md p-3 rounded-lg">
+            <img class="w-full" src="./images/news-1.png" alt="">
+            <div class="pt-5 space-y-2">
+                <p class="font-medium text-gray-600">Feb 05, 2027</p>
+                <h1 class="font-bold text-black text-xl ">Collecting 8 points for <br> discount</h1>
+                <p class="font-medium text-gray-600">There are many variations of passages of Lorem Ipsum available.</p>
+                <a class="font-medium text-lg" href="#">Learn More...</a>
+            </div>
+           </div>
+
+           <div class="bg-white shadow-md p-3 rounded-lg">
+            <img class="w-full" src="./images/news-2.png" alt="">
+            <div class="pt-5 space-y-2">
+                <p class="font-medium text-gray-600">Feb 05, 2027</p>
+                <h1 class="font-bold text-black text-xl ">Collecting 8 points for <br> discount</h1>
+                <p class="font-medium text-gray-600">There are many variations of passages of Lorem Ipsum available.</p>
+                <a class="font-medium text-lg" href="#">Learn More...</a>
+            </div>
+           </div>
+
+           <div class="bg-white shadow-md p-3 rounded-lg">
+            <img class="w-full" src="./images/news-3.png" alt="">
+            <div class="pt-5 space-y-2">
+                <p class="font-medium text-gray-600">Feb 05, 2027</p>
+                <h1 class="font-bold text-black text-xl ">Collecting 8 points for <br> discount</h1>
+                <p class="font-medium text-gray-600">There are many variations of passages of Lorem Ipsum available.</p>
+                <a class="font-medium text-lg" href="#">Learn More...</a>
+            </div>
+           </div>
+          </div>
+
     </main>
 
     <footer>
