footer section done

--- a/index.html
+++ b/index.html
@@ -243,8 +243,61 @@
 
     </main>
 
-    <footer>
-
+    <footer class=" bg-red-50 mt-12">
+          <div class="max-w-screen-xl lg:px-32 md:px-28 mx-auto px-10 py-10">
+             <!-- -----footer section---- -->
+             <div>
+                <div class="flex items-center justify-between">
+                   <img src="./images/cup.png">
+                   <div class="flex items-center space-x-6">
+                       <p class="text-lg font-bold text-slate-700">Ready to get strated?</p>
+                       <button class="bg-gradient-to-r from-yellow-500 to-red-600 px-4 py-3 rounded-lg text-white text-lg font-medium">Explore now </button>
+                   </div>
+                </div>
+           </div>
+          <!-- -----footer grid section----- -->
+           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 mt-14">
+           <!-- ------first footer------ -->
+               <div>
+                   <h3 class="font-bold text-lg pb-5">Quick Links</h3>
+                   <ul class="space-y-2 pb-5">
+                       <li><a href="#">Home</a></li>
+                       <li><a href="#">About Us</a></li>
+                       <li><a href="#">Insurance</a></li>
+                       <li><a href="#">Privacy Policy</a></li>
+                   </ul>
+               </div>
+               <!-- ------secon  footer------ -->
+               <div>
+                   <h3 class="font-bold text-lg pb-5">Our services</h3>
+                   <ul  class="space-y-2 pb-5">
+                       <li><a href="#">Life Insurance</a></li>
+                       <li><a href="#">Car Insurance</a></li>
+                       <li><a href="#">Health Insurance</a></li>
+                       <li><a href="#">House Insurance</a></li>
+                   </ul>
+               </div>
+               <!-- ------third footer------ -->
+               <div>
+                   <h3 class="font-bold text-lg pb-5">Help</h3>
+                   <ul  class="space-y-2 pb-5">
+                       <li><a href="#">FAQs</a></li>
+                       <li><a href="#">Conatct Us</a></li>
+                   </ul>
+               </div>
+               <!-- ------fourth footer------ -->
+               <div>
+                   <h1 class="font-bold text-2xl ">Subscribe To Our <br> Newsletter</h1>
+                   <br>
+                   <input class="bg-transparent text-lg border-b border-3 border-black" type="text" placeholder="Email Address"> <i class="fa-solid fa-chevron-right w-8 h-8 bg-gradient-to-r from-yellow-400 to-red-500 items-center justify-center inline-flex rounded-full text-white"></i>
+                   <ul class="flex pt-5 space-x-5 text-2xl">
+                       <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                       <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                       <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                   </ul>
+               </div>
+           </div>
+          </div>
     </footer>
 </body>
 </html>
