--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     </main>
 
     <footer class=" bg-red-50 mt-12">
-          <div class="max-w-screen-xl lg:px-32 md:px-28 mx-auto px-10 py-10">
+          <div class="max-w-screen-xl lg:px-32 md:px-28 mx-auto px-10 py-20">
              <!-- -----footer section---- -->
              <div>
                 <div class="flex items-center justify-between">
@@ -296,7 +296,12 @@
                        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
                    </ul>
                </div>
+               
            </div>
+           <!-- ----copyright text----- -->
+           <div class="text-center pt-10">
+            <p class="text-slate-700 font-medium text-center">© 2027 UIDesign.to - All rights reserved.</p>
+        </div>
           </div>
     </footer>
 </body>
